--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
         "php": "~5.5.0|~5.6.0|~7.0",
         "magento/magento-composer-installer": "*"
     },
-    "extra": {
-        "map": [
-            [
-                "*",
-                "Ibnab/ChangeAttributeSet"
-            ]
-        ]
+    "autoload": {
+        "files": [
+            "registration.php"
+        ],
+        "psr-4": {
+            "Ibnab\\ChangeAttributeSet\\": ""
+        }
     }
 }
